[tool.poetry]
name = "adv-mla-lab-1"
version = "0.1.0"
description = ""
authors = ["meghnareddyv <meghanareddyv13@gmail.com>"]
readme = "README.md"
packages = [{include = "adv_mla_lab_1"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
